Fixed single player game logic